faux site commit 6

--- a/sources/IUT Aix-Marseille Université - AMU.html
+++ b/sources/IUT Aix-Marseille Université - AMU.html
@@ -1574,25 +1574,25 @@ L'objectif  de cet événement est que les étudiant […]
 
 <script type="text/javascript" async="" src="./IUT Aix-Marseille Université - AMU_files/matomo.js.téléchargement"></script><script type="application/json" data-drupal-selector="drupal-settings-json">{"path":{"baseUrl":"\/","scriptPath":null,"pathPrefix":"fr\/","currentPath":"node\/78","currentPathIsAdmin":false,"isFront":true,"currentLanguage":"fr"},"pluralDelimiter":"\u0003","suppressDeprecationErrors":true,"ajaxPageState":{"libraries":"amu_actu\/global-styling,amu_chatbot\/chatbot-consent,amu_chatbot\/font,amu_copyright\/global-styling,amu_iut\/font,amu_iut\/global-styling,amu_iut\/vue-filtre-expose,amu_matomo\/global-styling,amu_p_map\/paragraph-map,amu_paragraph\/carrousel,amu_paragraph\/front,amu_paragraph\/gallery,amu_paragraph\/global-styling,amu_paragraph\/regions,amu_paragraph_text_edit\/global-styling,amu_social_icon\/global-styling,amu_zurb\/fancybox,amu_zurb\/fontawesome,amu_zurb\/foundation,amu_zurb\/global-styling,amu_zurb\/modal,amu_zurb\/paragraph-table,core\/picturefill,obfuscate_email\/default,paragraphs\/drupal.paragraphs.unpublished,responsive_table_filter\/responsive-table,system\/base,views\/views.ajax,views\/views.module","theme":"amu_iut","theme_token":null},"ajaxTrustedUrl":[],"mode":"https:\/\/webchat.studizz.fr\/webchat.js?token=5e67af4b75549a3157b7b7d7","views":{"ajax_path":"\/fr\/views\/ajax","ajaxViews":{"views_dom_id:3ab2643f773a4c0705a4d5e9ee2ec52ed05fe92558437325fa6d07f74a6785db":{"view_name":"actus","view_display_id":"block_1","view_args":"","view_path":"\/node\/78","view_base_path":"agenda","view_dom_id":"3ab2643f773a4c0705a4d5e9ee2ec52ed05fe92558437325fa6d07f74a6785db","pager_element":0}}},"amu_matomo_server":"\/\/matomo.univ-amu.fr\/","amu_matomo_site_id":"13","amu_matomo_tags":[""],"user":{"uid":0,"permissionsHash":"dbd36b60f44f0b32373ce4c898ffb2f605ad0d470d40831c533d89201c0ae28d"}}</script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_1.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_z3zw0MjIjGT5ptAZFWs1L3eT3GQzwct8T8iaJ2rJ_B8.FVmo1-oY8W5g8OHFR73uty2eRYNLqzUGDBet2XUFk6o.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_HUpcuWgtltnvzZqlrvB1GpqoJIxfOxuQRdw1R0RH11E.GMsQcXNNToUFJR3kLkJG06IW-EMAAvMT8he9CgPzfUg.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_a0jm3VdmdpN11V3PY9tIdAn3QqbFdUo-fcBcThQZrr0.Ex0Fwazqn_hBiZ8UUuLirQnGVyJFvuatcTMZmq2p4CQ.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_8Sbk5ENJXWdlUyQ6LKkwF1mA8vWSAML09cJDOSzU8mk.5tJbvNGyFxFHEMYdSeGgIOWF6XdkDQSoNswBbBNEWLw.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_spuSOw4GUoe_v9G0xcXTAPWTxyL9gWXenTooQczUqDM.Xxrdry6fWSKu1j2ALyuK_gHFQ-2Bp76ZrR6f3QXI47Y.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_w0iO3No0CsyHgJmryEbhwpkh5zx6m6dhvawBt4ufwyA.HRN_m4FplP890kDvBJQuv0fEgTHDKwrMZA2zBldV1JY.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_a5UiM5riCCx8GQk4IPly81KWzPcsHnVhzndmZfqUaTw.HaeXVMzafCQfVtWoLtN3wzhLWNs8cY2cH9OIQ8R9jfM.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_Hpe5jrMuKXrV4HSTMApXJsNBxraAgcHUrTjxkwWKqy8.KVLzIbbu0N9gmK1tElRosNAvOkjbXFACMXqtXk6w_bM.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_RMi0PjbebSu8k-EwCUCr6XDUDZle3It_1YFD-xlz6Os.PGWSFq9RyLrIw9uqqSGj-WR9AzMOTK1PSuyJuhUdPTQ.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_V1oRQ-kJlXBZaEklOtPUe_1t8-l0RS94HJ3gsqxKikc.hn7lqUhhOsl95D56ICJ13HDF_pG0y4-eJTPgPxaw6bs.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_KRjtvzl6UujB23-j_sF6dqOcbqg2z8ej98A8RU9bGsg.aQi1sZwfThCPikVEJ04pNp4EVl_agq456QLS83O9hBo.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_RpMAL0zKwJB4xPXGrqD_l8bnXkywDliK6r2HVmPHwLw.iT-n_otuaeKCgxnASny7bxKeqCDbaV1M7VdX1ZRQtqg.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_WmhavmnC0K35xZ9vLX51qtRqFT74puvZXIMWnNUYpbM.KBsJd4BsJZlR1sykyhEB3r6KbUBF1UvYBEBSPAzdNsI.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_fijXrAq-krYO9mrKDlEkctqCgTOBUxkEZMXpxXe413Y.ga-PIxgZClv6x8lmx6cAsFF4V8o58WSO5Kki1_P9AnQ.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_Kd-Rr4CfWIcfv2EQYjz4OIG4JxF1A8WJY7YzstVfaKY.fRPqtaK_Rq_Aw5wnL9LoT5hSbHgg3XgfpP5nmEJltGA.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_iuD7bgR7U2smoJ9aCZj1UTNCbLWlj18SuTTAZoKjo4Y.uPdgdThhhIoioTdDOVQPvW4P7U9xTqhProk_r2HgTHk.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_7ah0mgk0qmgLGw2M20ktWgcpSZQjBjN6o-FsJX0PjZQ.QpFbQC7mNfMaOWG7xHrJ2OV840ECwQyOr0igBf19c8o.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_EwdMwxWdagBDeJdMLO9vkJhxHf3eQd0S0v8UwIrBM5o.ak-jB9mgMq0z7TqnzUKzUuqt4I_wnQxL6hcysUn0Xr0.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_36t9b75D2dbLImSP8m5OrhIWfemfig_nLtxnuHLAQuE.m71la3tkS6S-CWov6Ohw6l6jgrLMCpd9CUOVFdtocGo.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_2.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_3.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_4.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_5.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_6.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_7.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_8.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_9.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_10.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_11.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_12.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_13.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_14.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_15.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_16.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_17.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_18.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_19.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_20.js.téléchargement"></script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_pCMZNa6ZNoFWlMaLPK9c8C8gFE2LBA-0Y0c0mwo9waE._HsqXl6IpwGUDL4I4PLwPxYa_DMHFgYeRsYq8uikRJU.js.téléchargement"></script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_3Km6SyVJKtlPBKtrPkQtWs2JIojwbynOYAC3UGmYgt8.si4LFxhqnR3SuO8ICQ7n3l4p5hKL8wkK2ySj7tmDAz8.js.téléchargement"></script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_UJIDKCrOIBcf8gh4wey8-NxlFheLa3iUfri0sBs3lbk.VkWN0rd43YYx998TfEMdg68g--MvlRKfEefiAcT63s8.js.téléchargement"></script>
