--- a/sources/IUT Aix-Marseille Université - AMU.html
+++ b/sources/IUT Aix-Marseille Université - AMU.html
@@ -1593,37 +1593,37 @@ L'objectif  de cet événement est que les étudiant […]
 <script src="./IUT Aix-Marseille Université - AMU_files/js_18.js.téléchargement"></script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_19.js.téléchargement"></script>
 <script src="./IUT Aix-Marseille Université - AMU_files/js_20.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_pCMZNa6ZNoFWlMaLPK9c8C8gFE2LBA-0Y0c0mwo9waE._HsqXl6IpwGUDL4I4PLwPxYa_DMHFgYeRsYq8uikRJU.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_3Km6SyVJKtlPBKtrPkQtWs2JIojwbynOYAC3UGmYgt8.si4LFxhqnR3SuO8ICQ7n3l4p5hKL8wkK2ySj7tmDAz8.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_UJIDKCrOIBcf8gh4wey8-NxlFheLa3iUfri0sBs3lbk.VkWN0rd43YYx998TfEMdg68g--MvlRKfEefiAcT63s8.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_rC-ECfwKjQg9xzlNl-S36UOwFQ8DVUAw6dS2gySqEMI.B9MceVNxsZEF0py0C-cEd4LrZKqnzaw_918_-QuClQ8.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_j-f4mwh9ivUm3sftQd92zRysfYnrxNTcHYnBwpE2S7E.lhY8gDatahEvkHs7cyI3i3MPxr68pBmhdTqoeTXyihA.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_wtJSImQ8pFM6pg-FBGbMafc3QuyNiwpKfGZtNQjebpM.Z34xqwhgKwgj--7ZtacsYrPR5jCyiuHxVe8q08lA7go.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_mGMh7nMC921vtYc4UqI5iH_aLkEG0dMJ4_V7H66pA4k.SSX0nrNMN4e3zrbbg1SxhkJEF9l8z-nZFxgwFGRp870.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_qDdBtDU5y4h2RQDxIFPiWegTB6iDgDhGd0bbIGBIcv8.c0jFW9Higb4_An6BKHMl0FA2KEIO9Chw2YwW36pguKI.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_7DK3R468ED4MbOjjnYKZXujNZDs0_bsdLRPeXVYCtok.lirXPvFSX_ueBDDu6hWracpCBRcph9JaGnkZaeOaVjU.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_lwrfvgWw2PhVJ8_WopL9BVhEPBfUU-dMDlN0D5J4ZbY.bm04afHSZ7HHvJ4VgzatqW1Pbv1dFn-UnHXVK_1pJic.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_wGH_5Ef3-9c7FG0TWC7Ij2QPaAwZEA5IW_jW1IUR0tk.JPMQBH6yniD60OYVAZzmSBwSfXCB05Lym8fxdz9qS1E.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_0QHUpNqbA8fAMB3cn25pGmbtCxeFZPI32LhBTEqA3G4.S0WFKWdqN5Xny-cNch8bSKipPs9cbMlMCtjZvqRuRtE.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_wpFdVXcUGisfHoxjO3VebDRbiTUWb7p54YWMoQ4yj4c.8PsceZsUrIxeGZ5lJ4uZlZIEqmR33TVUjjP2FpFZXCU.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_Ts8eP3UOV6bTg9FM9mwPbDab2oaX92v-dSGt7DX-gvw.3TKcZElR88BBIA6CeePJAGOsW1yIYf4lP8pI333YuZw.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_5lyEgtuYzFbknt789sXbvgY6WOEBhn68zCRaGR5wIJc.nfY2jN5VZK9aJEoVlKdt7FCojtROm6naMl66kd9bTmI.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_1woVuTYaOTc9db19BvtYERQ-r3zrWbaX8Iy9t_Z2qoM.nnBqb3vFUd32JsFc12wcJRwACYcbaXfKsLO_JTkcvZo.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_qBhNqN32qT_fI9ckz7-wcRxCZaQy-k_oY4794w6QOwk.MrmObcAeFpXR5-DR1FvCMOvGYT3ig4heyOWnC0FCIMg.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_RpLV1j1SEgkAOBNxIxvzKXRlefOlhPa03lpGt46bJEg.G-cemapLHTExlXRj3HJS74e1uN7tzQt8LttxbGzu7IU.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_tg-f19aKzkVeMWC-X-cyQ1NQjjxpIPkQyCogQFGZtYg.pS8o8nD2PjDefvSw6FRmLo2b9EuGwtar2zOHr6MIRVI.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_g7H1LRfFlzGfo1qSywv16rxKWHloq2EXhp4gJi28pWk.Syn9R_FU3ZBttHvifTA8euDrWioC82YeVvGP3K_KYEI.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_AVWcavf_qoYoXO3ylpnF3UfRGrQ4mh5rbkbTqsTd9tE.-_zHjGQ545J2CCm6u3jMirPL4ZoAL8hpSW6bJ4X27-A.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_RyHp2f5XCBPmh5D3gjGSe6JhaJyRIYGOoGiMlVutkfU.yt2kYMy0w8AbtF89WXb2P1rfjcP_HTHLT7097U8Y5b8.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_XDcokLWL1yUP3MFbdVN4MMJezgb1rVvEAaY3BKpP0js.gdj_OGqulOGinv13Gp3Gq6gjSRtusp1OVCUyGsy8Oyo.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_GOmis3Zc7GxsLpimTQHitYLwjzcHhz0jUpHOEMkKN7g.ssGBnzeQ1wInc_gegH8lfNZ2J4AohVpUFMspI5nQaG8.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_MlBJ8_JAAMgQ5gf-mGeg-sOQDF3eLeZO9peQIBlNkZg.h8Va-dcYYj_V5R4HHL4nxWPWbZiulAuO4vZLWEK9gzA.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_wm-dlbEoVrnnQ4I_9eBpLmmBtnQ0t43NCUf4WLqe1Zo.lw0IsO3Ev8CSVJXYsRVk88L9No90X3s1EKf87RGEiJQ.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_HXvkkfI3WZE9FN3IaXXQFQOAezmGNv4Z4Pag82orCM.IXqlbmONbibCxiKRdzg5PPlwmgUBY0PLz4D7rSkxTU0.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_nDcCMPbppMJVjjBobO6W2ruOB4e1UxpfzijHfJ5_CPI.1E_2SBGF2KIP62AAe-R5fHgNK08dV5ekVTEnb0DbtkE.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_DRQqvGzsb0OpqzWiorT4Ujcn_mdDymapJ4hlWZ1qnr8.7PqbjpWbMC2-DkzK74GnHu5jqpsa7M5G24XB1PlZnx0.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_ajQFywhiv6aZmmmIfTz6V8R_uMUr82a2YUbUCKUAKxc.XArLXC3XZKzF4wRtEbjWHEPPNh2KR7KXd8ChMQLz2dc.js.téléchargement"></script>
-<script src="./IUT Aix-Marseille Université - AMU_files/js_vpjtYoGKlON7_AsoAba3gWyOcr39dNQ-ahqvInxuhOs.0gLMRjRb66T8o5enyqXxklSU7Smo4kWbzVNvNxeEmkc.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_21.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_22.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_23.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_24.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_25.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_26.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_27.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_28.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_29.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_30.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_31.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_32.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_33.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_34.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_35.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_36.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_37.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_38.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_39.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_40.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_41.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_42.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_43.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_44.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_45.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_46.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_47.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_48.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_49.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_50.js.téléchargement"></script>
+<script src="./IUT Aix-Marseille Université - AMU_files/js_51.js.téléchargement"></script>
 
 
 
