java_info + manuel java CHECK reste css

--- a/sources/java_info.html
+++ b/sources/java_info.html
@@ -20,9 +20,57 @@
         </nav>
     </header>
 
+    <section>
+        <figure>
+            <img src="./Java_Logo.png" alt="Logo de Java">
+        </figure>
+        <h1>Java</h1>
+        <p>
+            ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
+            ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
+            ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
+        </p>
+    </section>
+
     <section id="E-J_P1">
         <p>
-            1 || 
+            1 || Le Java est un autre langage de programmation compilé incontournable pour les développeurs : il Intrus permet d'écrire des programmes informatiques, pour créer des applications mobiles ou des jeux vidéo, par exemple.<br>
+            2 || Java un langage inpiré du C++, dont il reprend des fonctionnalités mais en ajoute aussi des nouvelles : Java est notamment très dirigé vers Intrus la programmation orientée objet (POO).<br>
+            3 || <br>
+            4 || Comme tout langage de programmation, il repose sur le l'algorithmie : l'exécution de suites d'opération élémentaires selon un processus défini pour aboutir à un résultat. Mais aussi sur des principes fondamentaux de la POO tels que les classes, les instances de classes, l'héritage et le polymorphisme par exemple.<br>
+            5 || Il utilise ainsi des variables de stockage de valeur qui sont définies selon un type (nombre, caractère, chaine de caractère, booléen, etc...), des expressions logiques utilisées dans l'évaluation d'une condition, des boucles (répétition d'instruction dont la condition de fin est définie), etc...<br>
+            6 || <strong>Il est cependant sensible à la casse : c'est-à-dire que pour une instruction comme if (que l'on verra plus tard), écrire If avec une majuscule fera "planter" le programme. </strong>
+        </p>
+        
+        <h2>7 || Petite explication simple Intrus des principes de la POO :</h2>
+
+        <h3>8 || Les classes et instances de classe :</h3>
+        <p>
+            9 || Une classe est la description de données appelées attributs, et d'opérations appelées méthodes.<br>
+            10 || Ces attributs et méthodes ont des "portées" différentes : si ils sont <code>private</code> alors il ne sont accessibles qu'en interne (à l'intérieur de la classe), si ils sont <code>public</code> alors ils peuvent être utiliser en dehors de la classe à condition que l'appel soit précédé de "nomClasse.".<br>
+            11 || Une classe est un modèle de définition pour des objets ayant le même ensemble d'attributs, et le même ensemble d'opérations.<br>
+            12 || Intrus<br>
+            13 || A partir d'une classe, on peut créer un ou plusieurs objet. C'est ce qu'on appelle l'instanciation : chaque objet est une instance d'une seule classe.
+        </p>
+                    
+        <h3>14 || L'héritage :</h3>
+        <p>
+            15 || L'héritage est un concept Intrus fondamental de la POO qui permet de réutiliser du code de la classe mère dans la classe fille.<br>
+            16 || En Java, l'héritage est indiqué par le mot clé <code>extends</code> après le nom de la classe.<br>
+            17 || On dit donc qu'une classe en étend une autre. La classe qui est étendue est appelée classe mère ou classe parente et la classe qui étend est appelée classe fille ou classe enfant.<br>
+            18 || <strong>Remarque : une classe ne peut étendre qu'une seule classe à la fois mais une classe peut être étendue par plusieurs classes.</strong>
+        </p>
+
+        <h3>19 || Le polymorphisme :</h3>
+        <p>
+            20 || Le polymorphisme est un concept lié à l'héritage puisqu'il permet de "surcharger" les méthodes Intrus de la classe mère pour redéfinir leur comportement sans changer leur signature.
+        </p>     
+        <h4>21 || Par exemple :</h4>
+        <p>
+            22 || On a la classe mère Cercle et la classe fille Cylindre.<br>
+            23 || Intrus Cylindre hérite de la méthode Aire de Cercle mais l'aire d'un cylindre est différente de celle d'un cercle.<br>
+            24 || Pour résoudre ce problème, il faut surcharger la méthode.<br>
+            25 || Ainsi il sera possible de faire appel aux deux fonctions de même signature en utilisant le préfixe <code>super.</code> pour la méthode de la classe mère.
         </p>
 
     </section>
