--- a/sources/Manuel/manuel_faker.html
+++ b/sources/Manuel/manuel_faker.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 
 <head>
-    <title>Nom</title>
+    <title>Manuel : Faker</title>
     <meta charset="utf-8"/>
     <!-- Ajout du favicon -->
     <link rel="icon" type="image/jpg" href="RTFM.jpg">
