--- a/sources/Manuel/manuel_python.html
+++ b/sources/Manuel/manuel_python.html
@@ -21,8 +21,21 @@
     </header>
 
     <section>
-
+        <h1>Langage de Programmation : Python</h1>
+        <p>
+            cuifegfq  d od a    pzkd  è____________________<br>
+            °°+$ù   ^& fkejrfn"r            joc fekf^"ùma!r;jfe^époçr <br>
+            <strong>3RRoooRr</strong>
+        </p>
     </section>
+
+    <footer>
+        <p>
+            <a href="./manuel.html" alt="Lien vers la page du manuel"> R3t0ur au mAAAnuel1 -></a><br>
+            <a href="../../index.html" alt="Lien vers la page du QG">RRRRrretTouuuUur au QGI-----/ -></a>
+        </p>
+    </footer>
+
     
 </body>
 
