memo correction descript img

--- a/sources/memo_py.html
+++ b/sources/memo_py.html
@@ -21,7 +21,7 @@
     <section id="E-P_P2">
         <p>
             Mémo Post-It :<br>
-            <img src="./code_bucker_3.png" alt="Une ligne contenant quatres formes : un triangle, un triangle, un octogone et un carré" width="300px">
+            <img src="./code_bucker_3.png" alt="Une ligne contenant quatres formes : un triangle, un triangle, un hexagone et un carré" width="300px">
         </p>
     </section>
 
