--- a/sources/Manuel/manuel_faker.html
+++ b/sources/Manuel/manuel_faker.html
@@ -21,7 +21,19 @@
     </header>
 
     <section>
-
+        <ul>
+            <li>Tout hacker qui se respecte cache ses projets secrets derrière un Faker</li>
+            <li>Choix préférenciels pour des Etats d'une Faker Machine de Turing :</li>
+            <ul>
+                <li>E1 = MinGL</li>
+                <li>E2 = 3cho</li>
+                <li>E3 = map</li>
+                <li>E4 = geole</li>
+                <li>E5 = Pair</li>
+            </ul>
+            <li>Must pour des mots de passe de sécurité : les cacher dans des formes géométriques</li>
+            <li>Toujours avoir le réflexe de RTFM.</li>
+        </ul>
     </section>
     
 </body>
