--- a/sources/select_buncker.html
+++ b/sources/select_buncker.html
@@ -20,10 +20,12 @@
 
     <section id="E-B_P1">
         <p>Veuillez selectionnez le bucker</p>
-        <button type="button" id="LeFort">Le Fort</button>
-        <button type="button" id="LaCache">La Cache</button>
-        <button type="button" id="LeMonde">Le Monde</button>
-        <button type="button" id="LeServeur">Le Serveur</button>
+        <p>
+            <a href="./LeFort.html" id="LeFort"> Le Fort </a>
+            <a href="./LaCache.html" id="LaCache"> La Cache </a>
+            <a href="./found_buncker.html" id="LeMonde"></a> Le Monde </a> <!-- le bon buncker -->
+            <a href="./LeServeur.html" id="LeServeur"> Le Serveur </a>    
+        </p>
     </section>
 
 </body>
