--- a/sources/congratulations.html
+++ b/sources/congratulations.html
@@ -33,7 +33,11 @@
         <br>
         Felicitations enqueteurs, vous avez reussi a traquer le hacker et a l'ejecter des serveurs de l'IUT !<br>
         Vous avez aussi permit la correction de la faille de sécurité !<br>
-        Voila une mission accomplie brillement par l'escouade RTFM !
+        Voila une mission accomplie brillement par l'escouade RTFM !<br>
+        <br>
+        :)<br>
+        <br>
+        >> _
     </p>
     
 </body>
