oubli nb max action turing

--- a/sources/home_hack.html
+++ b/sources/home_hack.html
@@ -57,6 +57,7 @@
                 <td>   </td>
             </tr>
         </table>
+        <p>Nombre max d'actions : 12</p>
         
         
         <!-- La partie à remplir avant que les bandes de la machine de Turing apparaissent -->
